[package]
name = "remote_storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
azure = ["dep:azure_core", "dep:azure_storage", "dep:azure_storage_blobs", "dep:futures-io", "dep:pin-project", "dep:async-stream"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
once_cell.workspace = true
aws-smithy-http.workspace = true
aws-types.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
bytes.workspace = true
hyper = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml_edit.workspace = true
tracing.workspace = true
scopeguard.workspace = true
metrics.workspace = true
utils.workspace = true
pin-project-lite.workspace = true
workspace_hack.workspace = true
azure_core = { workspace = true, optional = true }
azure_storage = { workspace = true, optional = true }
azure_storage_blobs = { workspace = true, optional = true }
futures-io = { version = "0.3.28", optional = true }
pin-project = { version = "1.1.3", optional = true }
async-stream = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
test-context.workspace = true
